move some more type stuff, fix contrast on button, reverse sort order for activities

--- a/src/components/ActivityCard/ActivityCard.module.css
+++ b/src/components/ActivityCard/ActivityCard.module.css
@@ -1,7 +1,3 @@
-.description {
-  color: var(--grey-700);
-}
-
 .content {
   display: flex;
   justify-content: space-between;
@@ -11,7 +7,6 @@
 .link {
   text-decoration: none;
   background-color: var(--main-3);
-  color: var(--grey-700);
   padding: 0.5rem 1rem;
   border-radius: 5px;
 }
