--- a/src/sharedStyles/Typography.module.css
+++ b/src/sharedStyles/Typography.module.css
@@ -15,3 +15,11 @@
   font-weight: 700;
   font-size: 2rem;
 }
+
+.greyText {
+  color: var(--grey-700);
+}
+
+.blackText {
+  color: rgb(39, 38, 38);
+}
